--- a/src/app/bmx/components/respondents/respondents.component.html
+++ b/src/app/bmx/components/respondents/respondents.component.html
@@ -6,7 +6,7 @@
         <mat-form-field style="  width: 94%;margin: 20px;" appearance="outline">
             <mat-label>Copy & Paste Respondents</mat-label>
             <textarea matInput rows="4" cols="50" #respondants
-                placeholder="First name, Last Name, respondentName@email.com"></textarea>
+                placeholder="Last Name, First Name, respondentName@email.com"></textarea>
         </mat-form-field>
         <div style="display: flex;flex-direction: row;">
 
@@ -46,18 +46,18 @@
             <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
                 <!-- Position Column -->
                 <ng-container matColumnDef="FirstName">
-                    <th mat-header-cell *matHeaderCellDef  style="width: 15%;"> First Name </th>
-                    <td mat-cell *matCellDef="let element">
-                        <input matInput placeholder="First Name " [value]="element.FirstName"
-                            [(ngModel)]="element.FirstName" (focusout)="onFocusOutEvent($event)">
-                    </td>
-                </ng-container>
-
-                <ng-container matColumnDef="LastName">
                     <th mat-header-cell *matHeaderCellDef  style="width: 15%;"> Last Name </th>
                     <td mat-cell *matCellDef="let element">
                         <input matInput placeholder="Last Name" [value]="element.LastName"
                             [(ngModel)]="element.LastName" (focusout)="onFocusOutEvent($event)">
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="LastName">   
+                    <th mat-header-cell *matHeaderCellDef  style="width: 15%;"> First Name </th>
+                    <td mat-cell *matCellDef="let element">
+                        <input matInput placeholder="First Name " [value]="element.FirstName"
+                            [(ngModel)]="element.FirstName" (focusout)="onFocusOutEvent($event)">
                     </td>
                 </ng-container>
                 <ng-container matColumnDef="Email">
