--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -153,6 +153,15 @@
             <mat-icon style="font-size: 25px;" class="full-icon">text_fields</mat-icon>
         </button>
 
+        <button (click)="moveItemUp()" class="add-column" matTooltip="move up"
+            matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
+            <mat-icon style="font-size: 25px;" class="full-icon">arrow_upward</mat-icon>
+        </button>
+        
+        <button (click)="moveItemDown()" class="add-column" matTooltip="move down"
+            matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
+            <mat-icon style="font-size: 25px;" class="full-icon">arrow_downward</mat-icon>
+        </button>
     </div>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
@@ -339,7 +348,7 @@
 <!--💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲 TABLE 💻 DESKTOP 💻 GENERATOR 💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲-->
 <div class="desktop">
     <div style="display: flex;flex-direction: column;padding-left: 40px;">
-        <div style="font-size: 25px;color: #324395;padding-bottom: 10px;">{{bmxItem.componentSettings[0].categoryName}}
+        <div style="font-size: 25px;color: #324395;padding-bottom: 10px; margin-top: 10px;">{{bmxItem.componentSettings[0].categoryName}}
         </div>
         <div style="font-size: 18px;color: #ee7f25;padding-bottom: 20px;">
             {{bmxItem.componentSettings[0].categoryDescription}}</div>
