--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.scss
@@ -11,11 +11,25 @@
 .edit-icon {
     color: #324395;
     position: absolute;
-    margin: 33px;
-    right: 0px;
+    margin: 33px 10px 33px 10px;
+    right: 10px;
     z-index: 999999;
     top: 0;
 }
+.edit-icon-v2 {
+    color: #324395;
+    
+    z-index: 999999;
+    
+}
+.only-save-div{
+    width: 100%;
+    justify-content: end;
+    display: flex;
+    align-items: end;
+   
+}
+
 
 .paragram-desktop{
     display: block;
