--- a/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -13,7 +13,7 @@
             <mat-icon class="full-icon" style="font-size: 35px;">qr_code
             </mat-icon>
          </button> -->
-            <button (click)="openFullscreen()" mat-icon-button matTooltip="design tools" matTooltipPosition="above"
+            <button (click)="openFullscreen()" mat-icon-button matTooltip="fullscreen" matTooltipPosition="above"
                 *ngIf="true"
                 style="position: absolute;bottom: 9px;color: grey;z-index: 9999999999;right: -3px;outline: none;">
                 <mat-icon class="full-icon" style="font-size: 35px;">fullscreen
