remove old images

--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -74,7 +74,16 @@
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
         </div>
-        
+
+        <div class="row-field">
+          <label class="selectLabels">Display Name</label>
+          <mat-form-field appearance="outline">
+            <mat-label>Enter Display Name</mat-label>
+            <input type="text" matInput formControlName="bmxDisplayName">
+            
+          </mat-form-field>
+
+        </div>
       </div>
       <div>
         <div class="row-field">
