--- a/src/app/nw-vote/nw-vote.component.html
+++ b/src/app/nw-vote/nw-vote.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="toolbar mat-elevation-z2">{{projectName}}</mat-toolbar>
+<mat-toolbar class="toolbar mat-elevation-z2">{{projectName}} asda</mat-toolbar>
 
 <div class="container-fluid">
     <div class="row">
