Fixed newNames bug

--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -148,7 +148,7 @@
             <div *ngIf="bmxItem.componentType === 'image-rate-scale'" class="paragraph">
                 <div class="emoji-handle">.</div>
                 <div style="position: absolute;right: 0px;">
-                    <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
+                    <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete test" matTooltipPosition="above"
                         style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button
                         (dblclick)="openDialog('delete', i)" aria-label="delte">
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
