--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -323,14 +323,14 @@
                     style="overflow-y: scroll;">
                     <!-- POST_REPEATER -->
 
-                    <div class="row post-it-container "
+                    <div class="row post-it-container " 
                       [style.max-width]="namesBoxIndex == 1? '1320px': namesBoxIndex == 0 && wide?'931px': wide && createPostIt? '947px': '925px'"
-                      dragula="TASKS" [dragulaModel]="conceptData.concepts"
+                      [dragula]="clickBlocked ? null : 'TASKS'"  [dragulaModel]="conceptData.concepts"
                       (dragulaModelChange)="conceptData.concepts = $event; orderArray(conceptData)">
                       <div style="z-index: 999;" [ngClass]="postItListTheme"
-                        *ngFor="let item of conceptData.concepts; let i = index;">
+                        *ngFor="let item of conceptData.concepts; let i = index; trackBy: trackByFn">
 
-                        <mat-card appearance="outlined" class="mat-elevation-z4 post-card">
+                        <mat-card appearance="outlined" class="mat-elevation-z4 post-card" >
                           <div class="emoji-handle">
                             <!-- <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
                                 <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
@@ -341,7 +341,7 @@
                           <!-- TITLE -->
                           <mat-card-title>
                             <div class="post-title">
-                              <div class="mat-h2" style="line-height: 100%;">{{item.concept}}<div class="handle"
+                              <div class="mat-h2" style="line-height: 100%;">{{item.concept}} <div class="handle"
                                   style="float: right;width: 250px;    font-size: 1px;">.</div>
                               </div>
 
@@ -352,13 +352,14 @@
 
                           <!-- HTML-CONTENT -->
                           <mat-card-content class="post-content" [ngStyle]="{'font-size': font_size_text}"
-                            (click)="openDialog(item, 'edit')">
+                          (click)="openDialog(item, 'edit')" 
+                          >
                             <div class="ql-editor card-list" [style.font-size]="font_size_text" [innerHTML]="item.html">
                             </div>
                           </mat-card-content>
 
                           <mat-icon class="deleteButton" (click)="openDialog(item, 'delete')">cancel</mat-icon>
-
+                        
                         </mat-card>
 
                       </div>
