--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -75,6 +75,14 @@
           </mat-form-field>
         </div>
         
+        <div class="row-field">
+          <label class="selectLabels">Display name</label>
+          <mat-form-field appearance="outline">
+            <mat-label>Enter Company</mat-label>
+            <input type="text" matInput formControlName="bmxDisplayName">
+          </mat-form-field>
+
+        </div>
       </div>
       <div>
         <div class="row-field">
